--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content d-flex justify-content-center align-items-center">
             <div class="columns">
                 <div class="contOne" style="background-color: aqua;">
-                    <h3 class="pt-4 pb-3 mt-3 ">Conoce cómo puedes <b>TRANSFORMAR</b> tu manera de <b>FACTURAR</b></h2>
+                    <h3 class="pt-4 pb-3 mt-3 ">"Conoce cómo <b>MEJORAR</b> tu negocio de <b>MANTENIMIENTO VEHICULAR</b>"</h2>
                     <div class="videoPromocional">
                         <h4>Video Promocional</h4>
                     </div>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-12 text-center">
                         <div class="form-group">
-                            <input type="text" class="form-control my-3 " placeholder="Empresa">
+                            <input type="text" class="form-control my-3 " placeholder="N. Celular">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control my-3" placeholder="Correo">
