--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/index.css">
-    <script src="./assets/js/index.js"></script>
 </head>
 <body>
     <div class="fondoImg">
@@ -40,13 +39,13 @@
                     </div>
                     <div class="col-12 text-center">
                         <div class="form-group">
-                            <input type="text" class="form-control my-3 " placeholder="N. Celular">
+                            <input type="number" class="form-control my-3 n_celular" placeholder="N. Celular">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control my-3" placeholder="Correo">
+                            <input type="email" class="form-control my-3 correo" placeholder="Correo">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control my-3" placeholder="Contraseña">
+                            <input type="text" class="form-control my-3 password" placeholder="Contraseña">
                         </div>
                         <div>
                         </div>
@@ -74,6 +73,7 @@
         </div>
     </div>
     
+    <script src="./index.js"></script>
     
 </body>
 </html>
