--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control my-3 password" placeholder="Contraseña">
+                                    <input type="password" class="form-control my-3 password" placeholder="Contraseña">
                                 </div>
                             </div>
                             <div class="col-12 text-center text-md-center text-lg-start">
