--- a/index.html
+++ b/index.html
@@ -42,23 +42,27 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <div class="divComienza px-1">
+                                <div class="divComienza px-1 my-1">
                                     <p>¡Comienza con nosotros!</p>
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <input type="number" class="form-control my-3 n_celular" placeholder="N. Celular">
+                            <div class="row g-0 mb-2">
+                                <input type="text" class="form-control empresa" placeholder="Nombre de la empresa">
+                            </div>
+                            <div class="row g-2 mb-2">
+                                <div class="col-md">
+                                    <input type="text" class="form-control nombre" placeholder="Nombre">
+                                </div>
+                                <div class="col-md">
+                                    <input type="text" class="form-control cargo" placeholder="Cargo">
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <input type="email" class="form-control my-3 correo" placeholder="Correo">
+                            <div class="row g-2 mb-2">
+                                <div class="col-md">
+                                    <input type="number" class="form-control celular" placeholder="Celular">
                                 </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <input type="password" class="form-control my-3 password" placeholder="Contraseña">
+                                <div class="col-md">
+                                    <input type="email" class="form-control email" placeholder="Email">
                                 </div>
                             </div>
                             <div class="col-12 text-center text-md-center text-lg-start">
@@ -68,7 +72,7 @@
                             </div>
                         </div>                    
                     </div>
-                    <div class="row footer mt-4 text-center">
+                    <div class="row footer mt-2 text-center">
                         <div class="col-12 col-md-4 col-lg-4 mt-4">
                             <img class="imgLogoF" src="./assets/imgs/logoTruequea.svg" alt="">
                         </div>
